--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,28 @@
+html {
+  height: 100%;
+}
 h1 {
-    color: blue
+  color: blue;
+}
+
+body {
+  margin: 0;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  font-family: Verdana;
+}
+
+header {
+  background-color: lightblue;
+}
+
+section {
+  flex: 1;
+}
+
+footer {
+  background-color: lightblue;
+  text-align: center;
+  padding: 5px;
 }
