--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,17 @@
 html {
   height: 100%;
 }
+
 h1 {
-  color: blue;
+  color: white;
+  margin: 5px 0;
+}
+
+h2{
+    color: white;
+    margin: 5px 0;
+    font-weight: 100;
+    font-size: 1.2em;
 }
 
 body {
@@ -14,7 +23,7 @@ body {
 }
 
 header {
-  background-color: lightblue;
+    background-image: url(images/th.png);
 }
 
 section {
@@ -25,4 +34,29 @@ footer {
   background-color: lightblue;
   text-align: center;
   padding: 5px;
+}
+
+#header-wrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background: linear-gradient(45deg, #0798abfa, transparent);
+}
+
+#my-pictures {
+  padding: 5px;
+  width: 108px;
+  height: 108px;
+}
+
+#my-pictures img {
+  border-radius: 50%;
+  border: 4px solid white;
+  background-color: #ffffff90;
+}
+
+#header-info {
+  flex: 1;
+  padding: 10px;
+  text-shadow: 1px 1px 2px #000000;
 }
