--- a/src/style.css
+++ b/src/style.css
@@ -54,6 +54,9 @@ footer {
   border: 4px solid white;
   background-color: #ffffff90;
 }
+table {
+    width: 100%;
+}
 
 #header-info {
   flex: 1;
