style teams table

--- a/src/style.css
+++ b/src/style.css
@@ -20,6 +20,7 @@ body {
   display: flex;
   flex-direction: column;
   font-family: Verdana;
+  background-color: #e9f6f8;
 }
 
 header {
@@ -30,6 +31,23 @@ section {
   flex: 1;
 }
 
+#teamsTable {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+#teamsTable th,
+#teamsTable td {
+  border: 1px solid #057988;
+  padding: 5px;
+}
+#teamsTable th {
+  background-color: #0798ab;
+  color: white;
+}
+#teamsTable tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
 footer {
   background-color: lightblue;
   text-align: center;
