--- a/src/style.css
+++ b/src/style.css
@@ -20,7 +20,7 @@ body {
   display: flex;
   flex-direction: column;
   font-family: Verdana;
-  background-color: #e9;
+  background-color: #e9f6f8;
 }
 
 header {
