--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,5 @@
+@import url(//fonts.googleapis.com/css?family=Lexend+Mega);
+
 html {
   height: 100%;
 }
@@ -7,11 +9,11 @@ h1 {
   margin: 5px 0;
 }
 
-h2{
-    color: white;
-    margin: 5px 0;
-    font-weight: 100;
-    font-size: 1.2em;
+h2 {
+  color: white;
+  margin: 5px 0;
+  font-weight: 100;
+  font-size: 1.2em;
 }
 
 body {
@@ -24,7 +26,7 @@ body {
 }
 
 header {
-    background-image: url(images/th.png);
+  background-image: url(images/th.png);
 }
 
 section {
@@ -44,27 +46,55 @@ section {
 
 #teamsTable th,
 #teamsTable td {
-  border: 1px solid #057988;
+  border: 1px solid #000000;
   padding: 5px;
 }
+
 #teamsTable th {
-  background-color: #0798ab;
+  background-color: #000000;
   color: white;
 }
+
 #teamsTable tr:nth-child(even) {
   background-color: #f2f2f2;
 }
+
 footer {
-  background-color: lightblue;
-  text-align: center;
-  padding: 5px;
+  padding: 10px 10px 8px 10px;
+  background-color: #000000;
+  color: #f5f5f5;
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+  justify-content: center;
+  gap: 5px;
+}
+
+footer .item {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 3px;
+}
+
+footer a {
+  color: #f5f5f5;
+  padding: 2px 5px;
+  border-radius: 0.2em;
+  transition: 0.5s;
+}
+
+footer a:hover {
+  text-decoration: none;
+  background-color: #0798ab;
 }
 
 #header-wrapper {
   display: flex;
   flex-direction: row;
   align-items: center;
-  background: linear-gradient(45deg, #0798abfa, transparent);
+  background: linear-gradient(45deg, #000000fa, transparent);
 }
 
 #my-pictures {
@@ -75,11 +105,12 @@ footer {
 
 #my-pictures img {
   border-radius: 50%;
-  border: 4px solid white;
+  border: 4px solid rgb(255, 255, 255);
   background-color: #ffffff90;
 }
+
 table {
-    width: 100%;
+  width: 100%;
 }
 
 #header-info {
